--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BrowserActivity">
+        <activity android:name=".activity.BrowserActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
